fix(Byline): separator should only appear when both parts are visible

--- a/src/component/Primitive/Byline/Byline.module.scss
+++ b/src/component/Primitive/Byline/Byline.module.scss
@@ -1,9 +1,9 @@
 // .Byline {}
 
-.BylineDate {
-  &::after {
+// .BylineDate {}
+
+.BylineAuthor {
+  .BylineDate + &::before {
     content: ' - ';
   }
 }
-
-// .BylineAuthor {}
